tree-sitter-loongdoc/test/corpus/comment.txt
===========
comment
===========

// A single-line comment.

//

////
block comment
////

https://www.abcdefg.com

-----

(document
  (line_comment
    (line_comment_marker)
    (body))
  (line_comment
    (line_comment_marker))
  (block_comment
    (block_comment_marker)
    (body)
    (block_comment_marker))
  (section_block
    (paragraph
      (line))))
