tree-sitter-loongdoc/test/corpus/delimited_block.txt
================|||
delimited_block
================|||

====
====

====
line
====

====
Here's a sample loongdoc document:

----
= Document Title
Author Name

Content goes here.
----

The document header is useful, but not required.
====

-------------------

(document
  (section_block
    (delimited_block
      (delimited_block_marker)
      (delimited_block_marker)))
  (section_block
    (delimited_block
      (delimited_block_marker)
      (section_block
        (paragraph
          (line)))
      (delimited_block_marker)))
  (section_block
    (delimited_block
      (delimited_block_marker)
      (section_block
        (paragraph
          (line)))
      (section_block
        (listing_block
          (listing_block_marker)
          (listing_block_body)
          (listing_block_marker)))
      (section_block
        (paragraph
          (line)))
      (delimited_block_marker))))
