tree-sitter-loongdoc/test/corpus/ordered.txt
===========
ordered
===========

1. Protons
2. Electrons
3. Neutrons

. Linux

* Fedora
* Ubuntu
* Slackware

. BSD

* FreeBSD
* NetBSD

α. Protons
β. Electrons
γ. Neutrons

-----

(document
  (section_block
    (ordered_list
      (ol_item
        (ordered_list_marker
          (list_marker_digit))
        (line))
      (ol_item
        (ordered_list_marker
          (list_marker_digit))
        (line))
      (ol_item
        (ordered_list_marker
          (list_marker_digit))
        (line))
      (ol_item
        (ordered_list_marker
          (list_marker_dot))
        (line))))
  (section_block
    (unordered_list
      (ul_item
        (unordered_list_marker
          (list_marker_star))
        (line))
      (ul_item
        (unordered_list_marker
          (list_marker_star))
        (line))
      (ul_item
        (unordered_list_marker
          (list_marker_star))
        (line))))
  (section_block
    (ordered_list
      (ol_item
        (ordered_list_marker
          (list_marker_dot))
        (line))))
  (section_block
    (unordered_list
      (ul_item
        (unordered_list_marker
          (list_marker_star))
        (line))
      (ul_item
        (unordered_list_marker
          (list_marker_star))
        (line))))
  (section_block
    (ordered_list
      (ol_item
        (ordered_list_marker
          (list_marker_geek))
        (line))
      (ol_item
        (ordered_list_marker
          (list_marker_geek))
        (line))
      (ol_item
        (ordered_list_marker
          (list_marker_geek))
        (line)))))
